# flower-classification

./: .gitignore  README.md  setup.py
classification/: pyproject.toml  setup.py  shell.nix
classification/classifier/: classifier_hyp.ipynb  f1-scores-folds-train.csv  f1-scores-folds.csv  hyp-metrics.csv  hyp-metrics.ipynb  hyp.ipynb  k-fold-train.ipynb  train-metrics.csv  train.ipynb
classification/detector/: README.md
classification/detector/runs/train/yolov7-custom7/: results.txt
classification/evaluation/: detection.py  eval-test-model.ipynb  eval-test-yolo.ipynb  eval-train-yolo.ipynb  evaluation-end2end.ipynb  evaluation.py  helpers.py  labeling.py  results-final.txt
classification/jetson-deployment/: server.py
classification/jetson-deployment/image-capture/: capture.cc
classification/training/: test.ipynb
classification/utils/: conversions.py  manipulations.py
classification/yolo-second-run/runs/train/yolov7-custom7/: events.out.tfevents.1672427617.dl1.144257.0
code/: requirements.txt
code/evaluation/: detection.py  evaluation.py  labeling.py
code/jetson-deployment/: model.py  server.py
code/utils/: manipulations.py
evaluation/: detection.py  evaluation-end2end.ipynb  evaluation.py
evaluation/utils/: conversions.py  manipulations.py
jetson-deployment/: Autofocus.py  model.py  server.py
presentation/: presentation.nav  presentation.snm  presentation.tex
thesis/: build-thesis.sh  references.bib  thesis.tex
training/: test.ipynb  test.py
yolo-first-run/utils/: loss.py
yolo-second-run/: model.py  requirements.txt  train.py
(+14 files in other folders)
