[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Tobias Eidelpes <e1527193@student.tuwien.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.3"
apscheduler = "^3.10.0"
albumentations = "^1.3.0"
pandas = "^1.1.5"
onnxruntime = "^1.8.0"
opencv-python = "^4.7.0"
torch = "^2.1.2"
torchvision = "^0.16.2"
numpy = "^1.18.0"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
Pillow = "^10.1.0"
argparse = "^1.1"
matplotlib = "^3.3.4"
jupyter = "^1.0.0"
wandb = "^0.16.1"
seaborn = "^0.13.0"
onnx = "^1.15.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"